--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Navigation Tabs -->
         <nav class="nav">
             <div class="brand">
-                <img src="img/logo.png" alt="SE Calculator Logo" class="brand-logo"> SE Multitool
+                <img src="https://i.imgur.com/10S9zHl.png" alt="SE Calculator Logo" class="brand-logo"> SE Multitool
             </div>
 
             <!-- Hamburger button -->
@@ -241,7 +241,7 @@
                 <div id="jumpdriveResult" class="result-box" style="display: none;"></div>
                 <div class="field" style="margin-top: 2rem;">
                     <h5>Jump Drive Efficiency Chart</h5>
-                    <img src="img/Space_Engineers_Jump_Drive_Chart.png" alt="Jump Drive Chart" class="jump-chart-img">
+                    <img src="https://i.imgur.com/pHpxXCs.png" alt="Jump Drive Chart" class="jump-chart-img">
                 </div>
             </div>
         </div>
@@ -391,5 +391,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
